--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "facebook-clone",
   "version": "0.1.0",
+  "author": {
+    "name":"Daniel Ohinoyi Isah",
+    "email": "bizwithdan@gmail.com"
+  },
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
